package com.example.ejercicio_3_map.main.model;

public class Ubicacion {
}
