package com.example.ejercicio_3_map.main.repos.firebase;

public class FarmaciaHandler {
}
