package com.example.ejercicio_3_map.main.ui.activity;

public class RegisterActivity {
}
